# winnowcurl

./: Cargo.toml  readme-cn.md  readme.md
src/: lib.rs  main.rs  test_util.rs
src/curl/: curl_parsers.rs  mod.rs  parser.rs  url_parser.rs
src/url/: parser.rs  protocol.rs
tests/: url_parser_test.rs
